parser/ExpresionesParser.py
# Generated from Expresiones.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExpresionesParser ( Parser ):

    grammarFileName = "Expresiones.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'EZEQUIELAQUIINICIA'", "'EZEQUIELAQUIFINALIZA'", 
                     "'int'", "'float'", "'string'", "'PARA'", "'MIENTRAS'", 
                     "'CHI_LO_HACE'", "'TONCES'", "'CHI_NO'", "'CON'", "'FUNCION'", 
                     "'VACIO'", "'RETORNA'", "'IMPRIMIR'", "'BREAK'", "'CONTINUE'", 
                     "'IMPORT'", "'SEGUN'", "'CASO'", "'DEFECTO'", "'('", 
                     "')'", "'['", "']'", "';'", "'='", "','", "'*'", "'/'", 
                     "'%'", "'+'", "'-'", "'>'", "'<'", "'=='", "'!='", 
                     "'>='", "'<='", "'&&'", "'||'", "'!'" ]

    symbolicNames = [ "<INVALID>", "PROGRAMA_INICIO", "PROGRAMA_FIN", "INT_TYPE", 
                      "FLOAT_TYPE", "STRING_TYPE", "PARA", "MIENTRAS", "CHI_LO_HACE", 
                      "TONCES", "CHI_NO", "CON", "FUNCION", "VACIO", "RETORNA", 
                      "IMPRIMIR", "BREAK", "CONTINUE", "IMPORT", "SEGUN", 
                      "CASO", "DEFECTO", "LPAREN", "RPAREN", "LBRACKET", 
                      "RBRACKET", "SEMI", "ASSIGN", "COMMA", "MUL", "DIV", 
                      "MOD", "SUM", "RES", "GT", "LT", "EQ", "NEQ", "GTE", 
                      "LTE", "AND", "OR", "NOT", "ID", "NUM", "FLOAT_NUM", 
                      "STRING", "WS", "COMMENT", "ERROR_CHAR" ]

    RULE_root = 0
    RULE_instrucciones = 1
    RULE_declaracion = 2
    RULE_asignacion = 3
    RULE_cicloWhile = 4
    RULE_cicloFor = 5
    RULE_condicional = 6
    RULE_switchStmt = 7
    RULE_caseStmt = 8
    RULE_defaultStmt = 9
    RULE_bloqueInstrucciones = 10
    RULE_decFuncion = 11
    RULE_parametros = 12
    RULE_tipo = 13
    RULE_retorna = 14
    RULE_imprimir = 15
    RULE_importStmt = 16
    RULE_llamadaFuncion = 17
    RULE_argumentos = 18
    RULE_condicion = 19
    RULE_orExpr = 20
    RULE_andExpr = 21
    RULE_notExpr = 22
    RULE_comparacion = 23
    RULE_expr = 24
    RULE_term = 25
    RULE_factor = 26
    RULE_relop = 27

    ruleNames =  [ "root", "instrucciones", "declaracion", "asignacion", 
                   "cicloWhile", "cicloFor", "condicional", "switchStmt", 
                   "caseStmt", "defaultStmt", "bloqueInstrucciones", "decFuncion", 
                   "parametros", "tipo", "retorna", "imprimir", "importStmt", 
                   "llamadaFuncion", "argumentos", "condicion", "orExpr", 
                   "andExpr", "notExpr", "comparacion", "expr", "term", 
                   "factor", "relop" ]

    EOF = Token.EOF
    PROGRAMA_INICIO=1
    PROGRAMA_FIN=2
    INT_TYPE=3
    FLOAT_TYPE=4
    STRING_TYPE=5
    PARA=6
    MIENTRAS=7
    CHI_LO_HACE=8
    TONCES=9
    CHI_NO=10
    CON=11
    FUNCION=12
    VACIO=13
    RETORNA=14
    IMPRIMIR=15
    BREAK=16
    CONTINUE=17
    IMPORT=18
    SEGUN=19
    CASO=20
    DEFECTO=21
    LPAREN=22
    RPAREN=23
    LBRACKET=24
    RBRACKET=25
    SEMI=26
    ASSIGN=27
    COMMA=28
    MUL=29
    DIV=30
    MOD=31
    SUM=32
    RES=33
    GT=34
    LT=35
    EQ=36
    NEQ=37
    GTE=38
    LTE=39
    AND=40
    OR=41
    NOT=42
    ID=43
    NUM=44
    FLOAT_NUM=45
    STRING=46
    WS=47
    COMMENT=48
    ERROR_CHAR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA_INICIO(self):
            return self.getToken(ExpresionesParser.PROGRAMA_INICIO, 0)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExpresionesParser.LPAREN)
            else:
                return self.getToken(ExpresionesParser.LPAREN, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExpresionesParser.RPAREN)
            else:
                return self.getToken(ExpresionesParser.RPAREN, i)

        def LBRACKET(self):
            return self.getToken(ExpresionesParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(ExpresionesParser.RBRACKET, 0)

        def PROGRAMA_FIN(self):
            return self.getToken(ExpresionesParser.PROGRAMA_FIN, 0)

        def EOF(self):
            return self.getToken(ExpresionesParser.EOF, 0)

        def instrucciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpresionesParser.InstruccionesContext)
            else:
                return self.getTypedRuleContext(ExpresionesParser.InstruccionesContext,i)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = ExpresionesParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(ExpresionesParser.PROGRAMA_INICIO)
            self.state = 57
            self.match(ExpresionesParser.LPAREN)
            self.state = 58
            self.match(ExpresionesParser.RPAREN)
            self.state = 59
            self.match(ExpresionesParser.LBRACKET)
            self.state = 61 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.instrucciones()
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 131941400564216) != 0)):
                    break

            self.state = 65
            self.match(ExpresionesParser.RBRACKET)
            self.state = 66
            self.match(ExpresionesParser.PROGRAMA_FIN)
            self.state = 67
            self.match(ExpresionesParser.LPAREN)
            self.state = 68
            self.match(ExpresionesParser.RPAREN)
            self.state = 69
            self.match(ExpresionesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(ExpresionesParser.DeclaracionContext,0)


        def SEMI(self):
            return self.getToken(ExpresionesParser.SEMI, 0)

        def asignacion(self):
            return self.getTypedRuleContext(ExpresionesParser.AsignacionContext,0)


        def condicional(self):
            return self.getTypedRuleContext(ExpresionesParser.CondicionalContext,0)


        def decFuncion(self):
            return self.getTypedRuleContext(ExpresionesParser.DecFuncionContext,0)


        def retorna(self):
            return self.getTypedRuleContext(ExpresionesParser.RetornaContext,0)


        def imprimir(self):
            return self.getTypedRuleContext(ExpresionesParser.ImprimirContext,0)


        def llamadaFuncion(self):
            return self.getTypedRuleContext(ExpresionesParser.LlamadaFuncionContext,0)


        def importStmt(self):
            return self.getTypedRuleContext(ExpresionesParser.ImportStmtContext,0)


        def cicloWhile(self):
            return self.getTypedRuleContext(ExpresionesParser.CicloWhileContext,0)


        def cicloFor(self):
            return self.getTypedRuleContext(ExpresionesParser.CicloForContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(ExpresionesParser.SwitchStmtContext,0)


        def BREAK(self):
            return self.getToken(ExpresionesParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(ExpresionesParser.CONTINUE, 0)

        def expr(self):
            return self.getTypedRuleContext(ExpresionesParser.ExprContext,0)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_instrucciones

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = ExpresionesParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instrucciones)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.declaracion()
                self.state = 72
                self.match(ExpresionesParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.asignacion()
                self.state = 75
                self.match(ExpresionesParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.condicional()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.decFuncion()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 79
                self.retorna()
                self.state = 80
                self.match(ExpresionesParser.SEMI)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.imprimir()
                self.state = 83
                self.match(ExpresionesParser.SEMI)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.llamadaFuncion()
                self.state = 86
                self.match(ExpresionesParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 88
                self.importStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 89
                self.cicloWhile()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 90
                self.cicloFor()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 91
                self.switchStmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 92
                self.match(ExpresionesParser.BREAK)
                self.state = 93
                self.match(ExpresionesParser.SEMI)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 94
                self.match(ExpresionesParser.CONTINUE)
                self.state = 95
                self.match(ExpresionesParser.SEMI)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 96
                self.expr()
                self.state = 97
                self.match(ExpresionesParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(ExpresionesParser.TipoContext,0)


        def ID(self):
            return self.getToken(ExpresionesParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ExpresionesParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(ExpresionesParser.ExprContext,0)


        def LBRACKET(self):
            return self.getToken(ExpresionesParser.LBRACKET, 0)

        def NUM(self):
            return self.getToken(ExpresionesParser.NUM, 0)

        def RBRACKET(self):
            return self.getToken(ExpresionesParser.RBRACKET, 0)

        def getRuleIndex(self):
            return ExpresionesParser.RULE_declaracion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = ExpresionesParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.tipo()
                self.state = 102
                self.match(ExpresionesParser.ID)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==27:
                    self.state = 103
                    self.match(ExpresionesParser.ASSIGN)
                    self.state = 104
                    self.expr()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.tipo()
                self.state = 108
                self.match(ExpresionesParser.ID)
                self.state = 109
                self.match(ExpresionesParser.LBRACKET)
                self.state = 110
                self.match(ExpresionesParser.NUM)
                self.state = 111
                self.match(ExpresionesParser.RBRACKET)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExpresionesParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ExpresionesParser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpresionesParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExpresionesParser.ExprContext,i)


        def LBRACKET(self):
            return self.getToken(ExpresionesParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(ExpresionesParser.RBRACKET, 0)

        def getRuleIndex(self):
            return ExpresionesParser.RULE_asignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = ExpresionesParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(ExpresionesParser.ID)
                self.state = 116
                self.match(ExpresionesParser.ASSIGN)
                self.state = 117
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(ExpresionesParser.ID)
                self.state = 119
                self.match(ExpresionesParser.LBRACKET)
                self.state = 120
                self.expr()
                self.state = 121
                self.match(ExpresionesParser.RBRACKET)
                self.state = 122
                self.match(ExpresionesParser.ASSIGN)
                self.state = 123
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloWhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIENTRAS(self):
            return self.getToken(ExpresionesParser.MIENTRAS, 0)

        def LBRACKET(self):
            return self.getToken(ExpresionesParser.LBRACKET, 0)

        def CON(self):
            return self.getToken(ExpresionesParser.CON, 0)

        def condicion(self):
            return self.getTypedRuleContext(ExpresionesParser.CondicionContext,0)


        def RBRACKET(self):
            return self.getToken(ExpresionesParser.RBRACKET, 0)

        def bloqueInstrucciones(self):
            return self.getTypedRuleContext(ExpresionesParser.BloqueInstruccionesContext,0)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_cicloWhile

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCicloWhile" ):
                return visitor.visitCicloWhile(self)
            else:
                return visitor.visitChildren(self)




    def cicloWhile(self):

        localctx = ExpresionesParser.CicloWhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cicloWhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(ExpresionesParser.MIENTRAS)
            self.state = 128
            self.match(ExpresionesParser.LBRACKET)
            self.state = 129
            self.match(ExpresionesParser.CON)
            self.state = 130
            self.condicion()
            self.state = 131
            self.match(ExpresionesParser.RBRACKET)
            self.state = 132
            self.bloqueInstrucciones()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARA(self):
            return self.getToken(ExpresionesParser.PARA, 0)

        def LBRACKET(self):
            return self.getToken(ExpresionesParser.LBRACKET, 0)

        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpresionesParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(ExpresionesParser.AsignacionContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ExpresionesParser.SEMI)
            else:
                return self.getToken(ExpresionesParser.SEMI, i)

        def CON(self):
            return self.getToken(ExpresionesParser.CON, 0)

        def condicion(self):
            return self.getTypedRuleContext(ExpresionesParser.CondicionContext,0)


        def RBRACKET(self):
            return self.getToken(ExpresionesParser.RBRACKET, 0)

        def bloqueInstrucciones(self):
            return self.getTypedRuleContext(ExpresionesParser.BloqueInstruccionesContext,0)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_cicloFor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCicloFor" ):
                return visitor.visitCicloFor(self)
            else:
                return visitor.visitChildren(self)




    def cicloFor(self):

        localctx = ExpresionesParser.CicloForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cicloFor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(ExpresionesParser.PARA)
            self.state = 135
            self.match(ExpresionesParser.LBRACKET)
            self.state = 136
            self.asignacion()
            self.state = 137
            self.match(ExpresionesParser.SEMI)
            self.state = 138
            self.match(ExpresionesParser.CON)
            self.state = 139
            self.condicion()
            self.state = 140
            self.match(ExpresionesParser.SEMI)
            self.state = 141
            self.asignacion()
            self.state = 142
            self.match(ExpresionesParser.RBRACKET)
            self.state = 143
            self.bloqueInstrucciones()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHI_LO_HACE(self):
            return self.getToken(ExpresionesParser.CHI_LO_HACE, 0)

        def LPAREN(self):
            return self.getToken(ExpresionesParser.LPAREN, 0)

        def CON(self):
            return self.getToken(ExpresionesParser.CON, 0)

        def condicion(self):
            return self.getTypedRuleContext(ExpresionesParser.CondicionContext,0)


        def RPAREN(self):
            return self.getToken(ExpresionesParser.RPAREN, 0)

        def bloqueInstrucciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpresionesParser.BloqueInstruccionesContext)
            else:
                return self.getTypedRuleContext(ExpresionesParser.BloqueInstruccionesContext,i)


        def TONCES(self):
            return self.getToken(ExpresionesParser.TONCES, 0)

        def CHI_NO(self):
            return self.getToken(ExpresionesParser.CHI_NO, 0)

        def getRuleIndex(self):
            return ExpresionesParser.RULE_condicional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = ExpresionesParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(ExpresionesParser.CHI_LO_HACE)
            self.state = 146
            self.match(ExpresionesParser.LPAREN)
            self.state = 147
            self.match(ExpresionesParser.CON)
            self.state = 148
            self.condicion()
            self.state = 149
            self.match(ExpresionesParser.RPAREN)
            self.state = 150
            self.bloqueInstrucciones()
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 151
                self.match(ExpresionesParser.TONCES)
                self.state = 152
                self.bloqueInstrucciones()


            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 155
                self.match(ExpresionesParser.CHI_NO)
                self.state = 156
                self.bloqueInstrucciones()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEGUN(self):
            return self.getToken(ExpresionesParser.SEGUN, 0)

        def LPAREN(self):
            return self.getToken(ExpresionesParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(ExpresionesParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(ExpresionesParser.RPAREN, 0)

        def LBRACKET(self):
            return self.getToken(ExpresionesParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(ExpresionesParser.RBRACKET, 0)

        def caseStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpresionesParser.CaseStmtContext)
            else:
                return self.getTypedRuleContext(ExpresionesParser.CaseStmtContext,i)


        def defaultStmt(self):
            return self.getTypedRuleContext(ExpresionesParser.DefaultStmtContext,0)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_switchStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchStmt" ):
                return visitor.visitSwitchStmt(self)
            else:
                return visitor.visitChildren(self)




    def switchStmt(self):

        localctx = ExpresionesParser.SwitchStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_switchStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(ExpresionesParser.SEGUN)
            self.state = 160
            self.match(ExpresionesParser.LPAREN)
            self.state = 161
            self.expr()
            self.state = 162
            self.match(ExpresionesParser.RPAREN)
            self.state = 163
            self.match(ExpresionesParser.LBRACKET)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 164
                self.caseStmt()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 170
                self.defaultStmt()


            self.state = 173
            self.match(ExpresionesParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASO(self):
            return self.getToken(ExpresionesParser.CASO, 0)

        def NUM(self):
            return self.getToken(ExpresionesParser.NUM, 0)

        def LBRACKET(self):
            return self.getToken(ExpresionesParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(ExpresionesParser.RBRACKET, 0)

        def instrucciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpresionesParser.InstruccionesContext)
            else:
                return self.getTypedRuleContext(ExpresionesParser.InstruccionesContext,i)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_caseStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCaseStmt" ):
                return visitor.visitCaseStmt(self)
            else:
                return visitor.visitChildren(self)




    def caseStmt(self):

        localctx = ExpresionesParser.CaseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_caseStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(ExpresionesParser.CASO)
            self.state = 176
            self.match(ExpresionesParser.NUM)
            self.state = 177
            self.match(ExpresionesParser.LBRACKET)
            self.state = 179 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 178
                self.instrucciones()
                self.state = 181 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 131941400564216) != 0)):
                    break

            self.state = 183
            self.match(ExpresionesParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFECTO(self):
            return self.getToken(ExpresionesParser.DEFECTO, 0)

        def LBRACKET(self):
            return self.getToken(ExpresionesParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(ExpresionesParser.RBRACKET, 0)

        def instrucciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpresionesParser.InstruccionesContext)
            else:
                return self.getTypedRuleContext(ExpresionesParser.InstruccionesContext,i)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_defaultStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefaultStmt" ):
                return visitor.visitDefaultStmt(self)
            else:
                return visitor.visitChildren(self)




    def defaultStmt(self):
